fix button align on mobile screen

--- a/src/index.scss
+++ b/src/index.scss
@@ -240,4 +240,7 @@ flex-direction: column;
 .like-btn {
 float: right;
 }
+.con{
+  margin-top: -2px;
+}
 }
